# rag-doc-qa

./: .env  README.md  check_models.py  custom_types.py  data_loader.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/1762ff66-36ce-4bb8-830e-fb8d2d78794a/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/2b63d701-1ca0-40a3-b024-e2be94d53168/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/5e01c710-d525-4835-9586-1dd3ffbfa8ea/: mutable_id_tracker.mappings
